# matrix

./: CMakeGoogleTest.txt  CMakeLists.txt  README.md  main.cpp  matrix.hpp
libmatrix/: CMakeLists.txt  matrix.hpp
test/: CMakeLists.txt  test.cpp
test/unit_test/: CMakeLists.txt  test.cpp
